# oxc-yaml-parser

./: .clippy.toml  .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: autofix.yml  benchmark.yml  ci.yml
benches/: self.rs
benchmark/fixtures/: comprehensive.yaml  synthetic-ci.yaml
crates/oxc_yaml_parser/: CHANGELOG.md  Cargo.toml
crates/oxc_yaml_parser/src/: ast.rs  error.rs  lib.rs  parser.rs  pos.rs  scanner.rs
crates/oxc_yaml_parser/tests/: parse.rs
examples/: parse.rs
tasks/conformance/: Cargo.toml
tasks/conformance/fixtures/edge/: README.md  anchor-ending-colon.yaml  azure-template-dup.yaml  dup-keys-flow.yaml  flow-anchor-comma.yaml  gitlab-reference-tag.yaml  ha-secret-tag.yaml  merge-key.yaml  nonprintable-dq.yaml  nonprintable-plain.yaml  s7bg-colon-comma.yaml  tag-wrong-kind.yaml  unknown-directive.yaml  unknown-scalar-tag.yaml  unknown-shorthand-tag.yaml  weird-anchor-chars.yaml  yaml-11-version.yaml  yaml-13-version.yaml
tasks/conformance/snapshots/: edge.snap  prettier.snap  summary.snap  yaml-test-suite.snap
tasks/conformance/src/: main.rs
